/*
 * Copyright © 2017-2020 factcast.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.factcast.server.grpc.auth;

import com.google.common.annotations.VisibleForTesting;

import lombok.Data;
import lombok.NoArgsConstructor;

@NoArgsConstructor
@Data
public class FactCastRole {
    private String id;

    private AccessRules write = new AccessRules();

    private AccessRules read = new AccessRules();

    public Boolean canWrite(String ns) {
        return write.includes(ns);
    }

    public Boolean canRead(String ns) {
        return read.includes(ns);
    }

    @VisibleForTesting
    protected FactCastRole(String id) {
        this.id = id;
    }
}
